--- a/resume/publications.bib
+++ b/resume/publications.bib
@@ -1,8 +1,7 @@
 @article{sp2-l2-2,
   author =       "OpenPaaS::NG",
   title =        "{SP2-L2.2, Rapport} décrivant l'implantation du composant middleware de réplication hybride pair-à-pair V1",
-  year =         "2017",
-  url =          "https://research.linagora.com/download/attachments/16580772/SP2_L2-2_ImplantationDuComposantMiddlewareDeReplicationHybridePairAPair_VF.pdf?version=1&modificationDate=1493975898000"
+  year =         "2017"
 }
 
 @article{ec1.1,
@@ -15,27 +14,22 @@
 @article{sp2-l2-9,
   author =       "OpenPaaS::NG",
   title =        "{SP2-L2.9, Rapport} décrivant l'implantation du moteur temps réel V1",
-  year =         "2016",
-  url =          "https://research.linagora.com/download/attachments/16580784/SP2_L2-9_ImplantationDuMoteurTempsReelV1_VF.pdf?version=1&modificationDate=1493975919000"
+  year =         "2016"
 }
 
 @article{sp2-l2-10,
   author =       "OpenPaaS::NG",
   title =        "{SP2-L2.10, Rapport} décrivant l'implantation du moteur temps réel V2",
-  year =         "2017",
-  url =          "https://research.linagora.com/download/attachments/16580784/SP2_L2-9_ImplantationDuMoteurTempsReelV1_VF.pdf?version=1&modificationDate=1493975919000"
+  year =         "2017"
 }
 
 @inproceedings{nicolas:hal-01655438,
   TITLE = {{MUTE: A Peer-to-Peer Web-based Real-time Collaborative Editor}},
   AUTHOR = {Nicolas, Matthieu and Elvinger, Victorien and Oster, G{\'e}rald and Ignat, Claudia-Lavinia and Charoy, Fran{\c c}ois},
   URL = {https://hal.inria.fr/hal-01655438},
-  BOOKTITLE = {{ECSCW 2017 - 15th European Conference on Computer-Supported Cooperative Work}},
   ADDRESS = {Sheffield, United Kingdom},
   PUBLISHER = {{EUSSET}},
   SERIES = {Proceedings of 15th European Conference on Computer-Supported Cooperative Work - Panels, Posters and Demos},
-  VOLUME = {1},
-  NUMBER = {3},
   PAGES = {1-4},
   YEAR = {2017},
   MONTH = Aug,
