--- a/research-statement/ref-selected.bib
+++ b/research-statement/ref-selected.bib
@@ -39,7 +39,7 @@
   month     = oct,
   publisher = {IEEE Computer Society},
   address   = {Austin, TX, USA},
-  doi       = {none},
+  doi       = {10.4108/icst.collaboratecom.2013.254123},
 }
 
 @InProceedings{ShapiroSSS2011,
@@ -58,12 +58,9 @@
   TITLE = {{MUTE: A Peer-to-Peer Web-based Real-time Collaborative Editor}},
   AUTHOR = {Nicolas, Matthieu and Elvinger, Victorien and Oster, G{\'e}rald and Ignat, Claudia-Lavinia and Charoy, Fran{\c c}ois},
   URL = {https://hal.inria.fr/hal-01655438},
-  BOOKTITLE = {{ECSCW 2017 - 15th European Conference on Computer-Supported Cooperative Work}},
   ADDRESS = {Sheffield, United Kingdom},
   PUBLISHER = {{EUSSET}},
   SERIES = {Proceedings of 15th European Conference on Computer-Supported Cooperative Work - Panels, Posters and Demos},
-  VOLUME = {1},
-  NUMBER = {3},
   PAGES = {1-4},
   YEAR = {2017},
   MONTH = Aug,
@@ -86,6 +83,25 @@
   url = {http://antidoteDB.eu/}
 }
 
+@article{Terry:1995:MUC:224057.224070,
+ author = {Terry, D. B. and Theimer, M. M. and Petersen, Karin and Demers, A. J. and Spreitzer, M. J. and Hauser, C. H.},
+ title = {Managing Update Conflicts in Bayou, a Weakly Connected Replicated Storage System},
+ journal = {SIGOPS Oper. Syst. Rev.},
+ issue_date = {Dec. 3, 1995},
+ volume = {29},
+ number = {5},
+ month = dec,
+ year = {1995},
+ issn = {0163-5980},
+ pages = {172--182},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/224057.224070},
+ doi = {10.1145/224057.224070},
+ acmid = {224070},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
 @inproceedings{DangIoP16,
   author    = {Quang Vinh Dang and Claudia-Lavinia Ignat},
   title     = {{Performance of Real-time Collaborative Editors at Large Scale: User Perspective}},
@@ -99,22 +115,22 @@
 }
 
 @article{Prakash:1997:ACO:255495.255508,
- author = {Prakash, Ravi and Raynal, Michel and Singhal, Mukesh},
- title = {An Adaptive Causal Ordering Algorithm Suited to Mobile Computing Environments},
- journal = {J. Parallel Distrib. Comput.},
- issue_date = {March 15, 1997},
- volume = {41},
- number = {2},
- month = mar,
- year = {1997},
- issn = {0743-7315},
- pages = {190--204},
- numpages = {15},
- url = {http://dx.doi.org/10.1006/jpdc.1996.1300},
- doi = {10.1006/jpdc.1996.1300},
- acmid = {255508},
- publisher = {Academic Press, Inc.},
- address = {Orlando, FL, USA},
+  author = {Prakash, Ravi and Raynal, Michel and Singhal, Mukesh},
+  title = {An Adaptive Causal Ordering Algorithm Suited to Mobile Computing Environments},
+  journal = {Journal of Parallel and Distributed Computing},
+  issue_date = {March 15, 1997},
+  volume = {41},
+  number = {2},
+  month = mar,
+  year = {1997},
+  issn = {0743-7315},
+  pages = {190--204},
+  numpages = {15},
+  url = {http://dx.doi.org/10.1006/jpdc.1996.1300},
+  doi = {10.1006/jpdc.1996.1300},
+  acmid = {255508},
+  publisher = {Academic Press, Inc.},
+  address = {Orlando, FL, USA},
 }
 
 @inproceedings{DemersPODC87,
@@ -138,15 +154,12 @@
     MONTH = sep,
     PAGES = {223--242},
     PUBLISHER = {Springer International Publishing},
-	address = {Olso, Norway},
+    address = {Olso, Norway},
     url = {https://hal.inria.fr/hal-01238831/},
     doi = {10.1007/978-3-319-20499-4_12},
     isbn={978-3-319-20498-7},
-	keywords = {conference,2015},
+    keywords = {conference,2015},
 }
-
-
-
 
 @techreport{shapiro:inria-00555588,
   TITLE = {{A comprehensive study of Convergent and Commutative Replicated Data Types}},
