--- a/resume/deedy_resume-openfont.tex
+++ b/resume/deedy_resume-openfont.tex
@@ -234,8 +234,12 @@ The goal of this internship was to develop a tool to automatically check the res
 
 \section{Communication}
 
-\runsubsection{Presentations about MUTE}
-\descript{}
+I had the opportunity to present our research works on various occasions using MUTE.
+The aims of these presentations were to describe the issues encountered in nowadays systems
+and how \acp{CRDT} allow us to address them : scalability, availability, privacy.
+These demos were also the opportunity to show the new usages introduced by this technology
+such as the seamless transition between real-time and asynchronous collaboration.
+
 \vspace{5pt}
 \begin{tabular}{cp{150mm}}
 August 2017         & ECSCW 2017 : MUTE : A Peer-to-Peer Web-based Real-time Collaborative Editor.\\
@@ -245,7 +249,6 @@ December 2016       & HCERES Evaluation of the LORIA\\
 November 2016       & Inria Industry Meeting "Interaction with digital objects and services"\\
 October 2016        & Evaluation seminar of Inria teams working on "Distributed Systems and Middleware"\\
 \end{tabular}
-\sectionsep
 
 \hfill
 \end{document}
