fix(resume): Typos

--- a/resume/deedy_resume-openfont.tex
+++ b/resume/deedy_resume-openfont.tex
@@ -135,7 +135,7 @@ Furthermore, the team provides its expertise
 on eventually consistent data replication mechanisms in distributed systems.
 \\
 In order to validate them, these works have been integrated in \href{https://www.coedit.re}{\customboldlink{MUTE}},
-peer-to-peer web based realtime collaboration editor.
+peer-to-peer web based real-time collaboration editor.
 \begin{tightemize}
 \item Maintaining of \emph{LogootSplit}\citep{sp2-l2-9}\citep{sp2-l2-10} implementation
 \item Study of the literature on Conflict-free Replicated Data Types and of their use cases.
@@ -184,7 +184,7 @@ This major change of paradigm introduced several issues which needed to be addre
 \sectionsep
 
 \hfill\begin{minipage}{\dimexpr\textwidth-0.5cm}
-\descript{Design of a web based realtime collaborative editing tool}
+\descript{Design of a web based real-time collaborative editing tool}
 Coming from the research on collaborative editing, a new family of data replication and consistency maintenance algorithms
 was recently formalised : \acfp{CRDT} approach.
 This new family addresses several unresolved issues from other approaches, especially its scalability.
@@ -192,10 +192,10 @@ This new family addresses several unresolved issues from other approaches, espec
 The COAST team proposed a new algorithm from this family : \emph{LogootSplit}.
 \\
 In order to illustrate and highlight the work of the team on this new approach,
-my task was to design and implement a new real time collaborative editing tool based on this algorithm.
+my task was to design and implement a new real-time collaborative editing tool based on this algorithm.
 \begin{tightemize}
 \item Implementation of \emph{LogootSplit} as a library
-\item Design and development of \href{https://www.coedit.re}{\customboldlink{MUTE}}, a real time collaborative editing web app using this library
+\item Design and development of \href{https://www.coedit.re}{\customboldlink{MUTE}}, a real-time collaborative editing web app using this library
 \end{tightemize}
 \sectionsep\xdef\tpd{\the\prevdepth}
 \end{minipage}
