refactor(resume): Small changes

--- a/resume/deedy_resume-openfont.tex
+++ b/resume/deedy_resume-openfont.tex
@@ -234,11 +234,12 @@ The goal of this internship was to develop a tool to automatically check the res
 
 \section{Communication}
 
-I had the opportunity to present our research works on various occasions using MUTE.
-The aims of these presentations were to describe the issues encountered in nowadays systems
-and how \acp{CRDT} allow us to address them : scalability, availability, privacy.
+I presented our research works on various occasions using MUTE.
+The aims of these presentations were to describe the issues encountered
+in nowadays systems (scalability, availability, privacy) and how \acp{CRDT} allow us to address them.
 These demos were also the opportunity to show the new usages introduced by this technology
 such as the seamless transition between real-time and asynchronous collaboration.
+
 
 \vspace{5pt}
 \begin{tabular}{cp{150mm}}
